[project]
name = "itt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "gevent>=24.11.1",
    "gunicorn>=23.0.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "transformers>=4.46.3",
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "tencent"
url = "https://mirrors.tencent.com/pypi/simple"